--- a/Web.config
+++ b/Web.config
@@ -18,7 +18,7 @@
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
 	  <authentication mode ="Forms" >
-		  <forms loginUrl="~/Account/Login" timeout="3600"></forms>
+		  <forms loginUrl="~/Areas/Customer/Account/Login" timeout="3600"></forms>
 	  </authentication>
   </system.web>
   <runtime>
