--- a/24DH111577_LTW_BE_16-10.csproj
+++ b/24DH111577_LTW_BE_16-10.csproj
@@ -309,9 +309,10 @@
     <Content Include="Areas\Customer\Views\Order\Checkout.cshtml" />
     <Content Include="Areas\Customer\Views\Order\OrderSuccess.cshtml" />
     <Content Include="Areas\Customer\Views\Order\MyOrder.cshtml" />
-    <Content Include="Areas\Customer\Views\Home\PVOrderCard.cshtml" />
+    <Content Include="Areas\Customer\Views\Order\PVOrderCard.cshtml" />
     <Content Include="Areas\Customer\Views\Home\PVCategoryMenu.cshtml" />
     <Content Include="Areas\Customer\Views\Home\PVPersionalMenu.cshtml" />
+    <Content Include="Areas\Customer\Views\Order\OrderDetail.cshtml" />
     <None Include="Scripts\jquery-3.7.0.intellisense.js" />
     <Content Include="Scripts\jquery-3.7.0.js" />
     <Content Include="Scripts\jquery-3.7.0.min.js" />
